--- a/package.json
+++ b/package.json
@@ -1,11 +1,32 @@
 {
   "name": "napkyfs",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon main.js --exec babel-node"
   },
   "author": "Brandon Napky",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coco-napky/napkyfs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/coco-napky/napkyfs/issues"
+  },
+  "homepage": "https://github.com/coco-napky/napkyfs#readme",
+  "description": "",
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-preset-stage-3": "^6.11.0",
+    "babel-runtime": "^6.11.6",
+    "babelify": "^5.0.5",
+    "browserify": "^6.3.4",
+    "nodemon": "^1.10.2"
+  }
 }
