--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon main.js --exec babel-node"
+    "start": "babel-node main.js",
+    "build": "nodemon main.js --exec babel-node"
   },
   "author": "Brandon Napky",
   "license": "ISC",
@@ -28,5 +29,8 @@
     "babelify": "^5.0.5",
     "browserify": "^6.3.4",
     "nodemon": "^1.10.2"
+  },
+  "dependencies": {
+    "inquirer": "^1.1.2"
   }
 }
